2014-09-03  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c (get_openstack_swift_api_v2_setting): Set
	  hdl->x_auth_token to NULL.

2014-09-02  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Fix mailto allocation.

2014-09-02  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/rait-device.c: Use int value instead of pointer value.

2014-08-27  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c (check_user_amandahosts): Proceed to next
	  line if host and user match but not the service.

2014-08-27  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Bill Blough <devel@blough.us>
	* ndmp-src/ndmjob_args.c, device-src/tape-device.c,
	  server-src/amindexd.c, man/xml-source/amanda.conf.5.xml,
	  man/xml-source/amanda-auth.7.xml, man/xml-source/amzfs-sendrecv.8.xml,
	  man/xml-source/amanda-changers.7.xml,
	  man/xml-source/amzfs-snapshot.8.xml,
	  common-src/util.c: Fix typos.

2014-08-27  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/syshacks.m4: Define NEED_LD_LIBRARY_PATH_ENV on hpux.
	* common-src/alloc.c (safe_env_full): Add LD_LIBRARY_PATH.
	* amar-src/amar.c, common-src/ipc-binary.h, device-src/ndmp-device.c,
	  device-src/xfer-dest-device.c, device-src/xfer-dest-taper-cacher.c,
	  device-src/xfer-dest-taper-splitter.c: Change so gpointer to gchar*
	  because hpux compiler can't do arithmetic on gpointer.

2014-08-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Script_App.pm (print_to_server): print CRITICAL message
	  in [].

2014-07-31  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/dumpers.m4: Improve error message for bsdtar.

2014-07-29  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/bsd-security.m4: USE_AMANDAHOSTS must be defined even
	  without bsd security (for bsdudp and bsdtcp).

2014-07-29  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Nathan Stratton Treadway
	* man/xml-source/amgtar.8.xml: